--- a/password_generator/index.html
+++ b/password_generator/index.html
@@ -13,9 +13,16 @@
         <div class="container">
             <h1>Generate a <br /><span> Random Password </span></h1>
             <div class="display">
-                <input type="text" id="password" placeholder="Password"  />
-                <img src="images/copy.png" alt="" id="copy" onclick="copyPassword()" />
+                <input type="text" id="password-display" placeholder="Password"  />
+                <img src="images/copy.png" alt="" id="copy-btn" onclick="copyPassword()" />
             </div>
+
+            <p>Choose Password length:</p>
+            <div class="scrollbar">
+                <input type="range" id="length-input" min="4" max="15" value="8">
+                <span id="length-display">8</span>
+            </div>
+        
             <button id="generate-btn" onclick="createPassword()"><img src="images/generate.png" alt=""  /> Generate Password</button>
         </div>
 
